--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -23,7 +23,7 @@ jobs:
   
   - bash:
       az devops project create --name $(ADO-PROJECT-NAME) --organization $(System.TeamFoundationCollectionUri)
-    continueOnError: true    
+    continueOnError: true
     displayName: 'Create a new project'
 
   - bash: az devops configure --defaults organization=$(System.TeamFoundationCollectionUri) project=$(ADO-PROJECT-NAME) --use-git-aliases true
@@ -37,12 +37,17 @@ jobs:
       echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
     displayName: Set Github PAT for CLI
 
-  - bash:
-      #GITHUB LOGIN 
-
   - bash: 
       echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
     displayName: Set Azure Service Principal value
+
+  - bash:
+      az devops service-endpoint delete --id $(az devops service-endpoint list 
+                                              --organization $(System.TeamFoundationCollectionUri) 
+                                              --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) 
+                                              --yes
+    continueOnError: true
+    displayName: 'Delete Github Service Endpoint if exists'
 
   - bash: 
       az devops service-endpoint github create  --github-url $(GITHUB-ORG-URL) 
@@ -50,27 +55,35 @@ jobs:
                                                 --org $(System.TeamFoundationCollectionUri)
                                                 --project $(ADO-PROJECT-NAME)
     continueOnError: true
-    displayName: 'Create Github Service Endpoint'
-  
+    displayName: 'Create Github Service Endpoint if does not exist'
+
   - bash:
-      az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
+      az devops service-endpoint update --id $(az devops service-endpoint list 
+                                        --organization $(System.TeamFoundationCollectionUri) 
+                                        --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) 
+                                        --enable-for-all 
+                                        --organization $(System.TeamFoundationCollectionUri) 
+                                        --project $(ADO-PROJECT-NAME)
     displayName: 'Update Service Endpoint'
+
+  - bash:
+      az devops service-endpoint delete --id $(az devops service-endpoint list 
+                                              --organization $(System.TeamFoundationCollectionUri) 
+                                              --project $(ADO-PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) 
+                                              --yes
+    continueOnError: true
+    displayName: 'Delete Azure Service Connection if exists'  
 
   - bash:
       az devops service-endpoint azurerm create --azure-rm-service-principal-id $(AZURE-RM-SERVICE-PRINCIPAL-ID-DEV)
                                           --azure-rm-subscription-id $(AZURE-RM-SUBSCRIPTION-ID-DEV)
-                                          --azure-rm-subscription-name $(AZURE-RM-SUBSCRIPTION-NAME-DEV)
+                                          --azure-rm-subscription-name "$(AZURE-RM-SUBSCRIPTION-NAME-DEV)"
                                           --azure-rm-tenant-id $(AZURE-RM-TENANT-ID)
                                           --name $(AZURE-SERVICE-ENDPOINT-NAME)
                                           --org $(System.TeamFoundationCollectionUri) 
                                           --project $(ADO-PROJECT-NAME)
-    continueOnError: true
     displayName: 'Create Azure Service Connection'
 
-  - bash:
-      az devops service-endpoint update --id $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(AZURE-SERVICE-ENDPOINT-NAME)|cut -d" " -f1) --enable-for-all --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME)
-    displayName: 'Update endpoint'
-   
   - bash:
       curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
       echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
@@ -79,34 +92,38 @@ jobs:
     displayName: 'Install gh' 
 
   - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-code -p $(CODE-TEMPLATE) --private --confirm
+      gh repo create $(GITHUB-ORG-NAME)/project-$(PROJECT-NAME)-code -p $(CODE-TEMPLATE) --private --confirm
     continueOnError: true
     displayName: 'Create git repo for ml code from template'
 
   - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-controller -p $(CONTROLLER-TEMPLATE) --private --confirm
+      gh repo create $(GITHUB-ORG-NAME)/project-$(PROJECT-NAME)-controller -p $(CONTROLLER-TEMPLATE) --private --confirm
     continueOnError: true
     displayName: 'Create git repo for the controller from template'
 
   - bash:
-      (echo $(pwd);
-      ssh-keygen -f $(pwd)/id_rsa;
-      gh ssh-key add id_rsa;
-      git clone https://github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
-      git remote set-url origin https://github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
+      (git clone https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
+      git remote set-url origin https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
       cd project-$(PROJECT-NAME)-controller/devops-pipelines;
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml;
-      git commit -am "modified ymls to reflect new repo name";
+      git commit -am "modified YAML files to reflect new repo name";
       git push) &
-
     continueOnError: true  
-    displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
+    displayName: 'Pull Controller git repo and modify YAML files to reflect new repo name' 
 
   - bash:
-      gh repo create ai-factory-azure/project-$(PROJECT-NAME)-iac -p $(IAC-TEMPLATE) --private --confirm
+      gh repo create $(GITHUB-ORG-NAME)/project-$(PROJECT-NAME)-iac -p $(IAC-TEMPLATE) --private --confirm
     continueOnError: true
     displayName: 'Create git repo for IAC from template'
+
+  - bash:
+      az pipelines delete --id $(az pipelines list 
+                          --organization $(System.TeamFoundationCollectionUri) 
+                          --project $(ADO-PROJECT-NAME) -o table |grep $(IAC-PIPELINE-NAME)|cut -d" " -f1) 
+                          --yes
+    continueOnError: true
+    displayName: 'Delete IAC Pipeline if exists'
 
   - bash:
       az pipelines create --name $(IAC-PIPELINE-NAME)
@@ -117,8 +134,16 @@ jobs:
                           --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT-NAME)|cut -d" " -f1)
                           --org $(System.TeamFoundationCollectionUri) 
                           --project $(ADO-PROJECT-NAME)   
-                          --skip-first-run true                    
-    displayName: 'Create IAC Pipeline from YAML'
+                          --skip-first-run true
+    displayName: 'Create IAC Pipeline using YAML'
+
+  - bash:
+      az pipelines delete --id $(az pipelines list 
+                          --organization $(System.TeamFoundationCollectionUri) 
+                          --project $(ADO-PROJECT-NAME) -o table |grep $(MODEL-TRAINING-PIPELINE-NAME)|cut -d" " -f1) 
+                          --yes
+    continueOnError: true
+    displayName: 'Delete Training Pipeline if exists'
 
   - bash:
       az pipelines create --name $(MODEL-TRAINING-PIPELINE-NAME)
@@ -129,8 +154,16 @@ jobs:
                           --service-connection $(az devops service-endpoint list --organization $(System.TeamFoundationCollectionUri) --project $(ADO-PROJECT-NAME) -o table |grep $(GITHUB-SERVICE-ENDPOINT-NAME)|cut -d" " -f1)
                           --org $(System.TeamFoundationCollectionUri) 
                           --project $(ADO-PROJECT-NAME)   
-                          --skip-first-run true                    
+                          --skip-first-run true        
     displayName: 'Create Training Pipeline from YAML'
+
+  - bash:
+      az pipelines delete --id $(az pipelines list 
+                          --organization $(System.TeamFoundationCollectionUri) 
+                          --project $(ADO-PROJECT-NAME) -o table |grep $(BATCH-SCORING-PIPELINE-NAME)|cut -d" " -f1) 
+                          --yes
+    continueOnError: true
+    displayName: 'Delete Batch Scoring Pipeline if exists'
 
   - bash:
       az pipelines create --name $(BATCH-SCORING-PIPELINE-NAME)
@@ -142,4 +175,4 @@ jobs:
                           --org $(System.TeamFoundationCollectionUri) 
                           --project $(ADO-PROJECT-NAME)   
                           --skip-first-run true                    
-    displayName: 'Create Batch scoring Pipeline from YAML'
+    displayName: 'Create Batch Scoring Pipeline from YAML'
