git clone stuff

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -93,6 +93,16 @@ jobs:
     displayName: 'Create git repo for the controller from template'
 
   - bash:
+      (git clone https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
+      git remote set-url origin https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
+      cd project-$(PROJECT-NAME)-controller/devops-pipelines;
+      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml;
+      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml;
+      git commit -am "modified ymls to reflect new repo name";
+      git push) &
+    displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
+
+  - bash:
       gh repo create $(GITHUB-ORG-NAME)/project-$(PROJECT-NAME)-iac -p $(IAC-TEMPLATE) --private --confirm
     continueOnError: true
     displayName: 'Create git repo for IAC from template'
