--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -94,12 +94,12 @@ jobs:
 
   - bash:
       (git clone https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
+      git config --global user.email "you@example.com";
+      git config --global user.name $(AZURE-DEVOPS-EXT-GITHUB-USERNAME);
       git remote set-url origin https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
       cd project-$(PROJECT-NAME)-controller/devops-pipelines;
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml;
-      git config --global user.email "you@example.com"
-      git config --global user.name $(AZURE-DEVOPS-EXT-GITHUB-USERNAME)
       git commit -am "modified ymls to reflect new repo name";
       git push) &
     displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
