--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -102,7 +102,8 @@ jobs:
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/g' deploy-model-batch-scoring.yml;
       cat deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/g' deploy-model-training-pipeline.yml;
-      git commit -am "modified ymls to reflect new repo name";
+      git add -A;
+      git commit -m "modified ymls to reflect new repo name";
       git push) &
     displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
 
