--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -98,10 +98,11 @@ jobs:
       git config --global user.name $(AZURE-DEVOPS-EXT-GITHUB-USERNAME);
       git remote set-url origin https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
       cd project-$(PROJECT-NAME)-controller/devops-pipelines;
-      cat deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-batch-scoring.yml;
-      cat deploy-model-batch-scoring.yml;
+      stat deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-training-pipeline.yml;
+      stat deploy-model-training-pipeline.yml;
+      cd ..;
       git status;
       git add -A;
       git commit -m "modified ymls to reflect new repo name";
