--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -101,7 +101,7 @@ jobs:
       sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-batch-scoring.yml > deploy-model-batch-scoring.yml;
       sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-training-pipeline.yml > deploy-model-batch-scoring.yml;
       git status;
-      git add -A;
+      git add -a;
       git commit -m "modified ymls to reflect new repo name";
       git push) &
     displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
