--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -99,7 +99,9 @@ jobs:
       git remote set-url origin https://$(AZURE-DEVOPS-EXT-GITHUB-USERNAME):$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller;
       cd project-$(PROJECT-NAME)-controller/devops-pipelines;
       sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-batch-scoring.yml > deploy-model-batch-scoring.yml;
-      sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-training-pipeline.yml > deploy-model-batch-scoring.yml;
+      cat deploy-model-training-pipeline.yml;
+      sed 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-training-pipeline.yml > deploy-model-training-pipeline.yml;
+      cat deploy-model-training-pipeline.yml;
       git status;
       git add -a;
       git commit -m "modified ymls to reflect new repo name";
