--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -102,9 +102,7 @@ jobs:
       cat deploy-model-training-pipeline.yml;
       sed -i 's/project-template-file-batch-code/project-$(PROJECT-NAME)-code/g' deploy-model-training-pipeline.yml;
       cat deploy-model-training-pipeline.yml;
-      git status;
-      git add -A;
-      git commit -m "modified ymls to reflect new repo name";
+      git commit -am "modified ymls to reflect new repo name";
       git push) &
     displayName: 'Pull git repo controller and modify yml to reflect new repo name' 
 
